--- a/app/src/main/res/layout/recycler_shop.xml
+++ b/app/src/main/res/layout/recycler_shop.xml
@@ -8,7 +8,9 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TableRow
             android:layout_width="match_parent"
@@ -83,42 +85,6 @@
                 android:textSize="10sp"/>
 
         </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/txtShopSub1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="8sp"/>
-
-            <TextView
-                android:id="@+id/txtShopSub2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="8sp"/>
-
-            <TextView
-                android:id="@+id/txtShopSub3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="8sp"/>
-
-            <TextView
-                android:id="@+id/txtShopSub4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="8sp"/>
-
-        </TableRow>
-
 
     </TableLayout>
 
