--- a/app/src/main/res/layout/recycler_room.xml
+++ b/app/src/main/res/layout/recycler_room.xml
@@ -4,8 +4,8 @@
     android:layout_height="50dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageButton
-        android:id="@+id/imbLock"
+    <ImageView
+        android:id="@+id/imgLock"
         android:layout_width="25dp"
         android:layout_height="25dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -13,16 +13,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
-        android:src="@drawable/imblock"/>
+        android:src="@drawable/help"/>
 
     <TextView
         android:id="@+id/txtRoomName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        app:layout_constraintTop_toTopOf="@id/imbLock"
-        app:layout_constraintBottom_toBottomOf="@id/imbLock"
-        app:layout_constraintLeft_toRightOf="@id/imbLock"/>
+        app:layout_constraintTop_toTopOf="@id/imgLock"
+        app:layout_constraintBottom_toBottomOf="@id/imgLock"
+        app:layout_constraintLeft_toRightOf="@id/imgLock"/>
 
     <TextView
         android:id="@+id/txtRoomInfo"
@@ -32,8 +32,8 @@
         app:layout_constraintLeft_toRightOf="@id/txtRoomName"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintTop_toTopOf="@id/imbLock"
-        app:layout_constraintBottom_toBottomOf="@id/imbLock"
+        app:layout_constraintTop_toTopOf="@id/imgLock"
+        app:layout_constraintBottom_toBottomOf="@id/imgLock"
         android:background="@drawable/layoutshape"/>
 
 
