--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,18 +1,292 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello, world!"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintHeight_percent="0.95"
+        app:layout_constraintWidth_percent="0.9">
+
+        <TableLayout
+            android:id="@+id/tbPlayer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/guideGame1">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/imgPlayer1"
+                    android:layout_width="60dp"
+                    android:layout_height="80dp"
+                    android:layout_marginBottom="10dp"
+                    android:src="@drawable/layoutshape" />
+
+                <ImageView
+                    android:id="@+id/imgPlayer2"
+                    android:layout_width="60dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:src="@drawable/layoutshape"/>
+
+                <ImageView
+                    android:id="@+id/imgPlayer3"
+                    android:layout_width="60dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:src="@drawable/layoutshape"/>
+
+                <ImageView
+                    android:id="@+id/imgPlayer4"
+                    android:layout_width="60dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:src="@drawable/layoutshape"/>
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+
+                <TextView
+                    android:id="@+id/txtPlayer1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:id="@+id/txtPlayer2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:id="@+id/txtPlayer3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:id="@+id/txtPlayer4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_gravity="center"/>
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+
+                <ImageView
+                    android:id="@+id/imgPlayer5"
+                    android:layout_width="60dp"
+                    android:layout_height="80dp"
+                    android:src="@drawable/layoutshape"
+                    android:layout_marginBottom="10dp"
+                    />
+
+                <ImageView
+                    android:id="@+id/imgPlayer6"
+                    android:layout_width="60dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:src="@drawable/layoutshape"/>
+
+                <ImageView
+                    android:id="@+id/imgPlayer7"
+                    android:layout_width="60dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:src="@drawable/layoutshape"/>
+
+                <ImageView
+                    android:id="@+id/imgPlayer8"
+                    android:layout_width="60dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:src="@drawable/layoutshape"/>
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+
+                <TextView
+                    android:id="@+id/txtPlayer5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:id="@+id/txtPlayer6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:id="@+id/txtPlayer7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:id="@+id/txtPlayer8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+
+            </TableRow>
+
+        </TableLayout>
+
+        <TextView
+            android:id="@+id/txtCase"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/guideGame1"
+            app:layout_constraintTop_toBottomOf="@id/tbPlayer"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideGame1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.45"/>
+
+        <TableRow
+            android:id="@+id/trDeck"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/guideGame1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent">
+
+            <ImageView
+                android:id="@+id/imgDeck1"
+                android:layout_width="50dp"
+                android:layout_height="70dp"
+                android:src="@drawable/layoutshape"/>
+
+            <ImageView
+                android:id="@+id/imgDeck2"
+                android:layout_width="50dp"
+                android:layout_height="70dp"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/layoutshape"/>
+
+            <ImageView
+                android:id="@+id/imgDeck3"
+                android:layout_width="50dp"
+                android:layout_height="70dp"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/layoutshape"/>
+
+            <ImageView
+                android:id="@+id/imgDeck4"
+                android:layout_width="50dp"
+                android:layout_height="70dp"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/layoutshape"/>
+
+            <ImageView
+                android:id="@+id/imgDeck5"
+                android:layout_width="50dp"
+                android:layout_height="70dp"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/layoutshape"/>
+
+            <ImageView
+                android:id="@+id/imgDeck6"
+                android:layout_width="50dp"
+                android:layout_height="70dp"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/layoutshape"/>
+
+        </TableRow>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideGame2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.1"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideGame3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.9"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/viewChat"
+            android:layout_width="0dp"
+            android:layout_marginTop="20dp"
+            android:layout_height="200dp"
+            app:layout_constraintLeft_toRightOf="@id/guideGame2"
+            app:layout_constraintRight_toLeftOf="@id/guideGame3"
+            app:layout_constraintTop_toBottomOf="@id/trDeck"
+            android:background="@drawable/layoutshape"/>
+
+        <TableRow
+            android:id="@+id/trChat"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/viewChat"
+            app:layout_constraintLeft_toRightOf="@id/guideGame2"
+            app:layout_constraintRight_toLeftOf="@id/guideGame3">
+
+            <EditText
+                android:id="@+id/editChat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="채팅을 입력해 주세요."
+
+                android:layout_weight="3"/>
+
+            <Button
+                android:id="@+id/btnChatSend"
+                android:layout_width="62dp"
+                android:layout_height="wrap_content"
+                android:text="전송"/>
+
+        </TableRow>
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
