--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -16,14 +16,60 @@
         app:layout_constraintHeight_percent="0.95"
         app:layout_constraintWidth_percent="0.9">
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideGameChar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.1" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideGameTab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.45" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideGameL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.1"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideGameR"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.9"/>
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/guideGameChar"
+            android:background="@drawable/layoutshape">
+
+            <TextView
+                android:id="@+id/txtGameTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="0"/>
+
+        </FrameLayout>
+
         <TableLayout
             android:id="@+id/tbPlayer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/guideGame1">
+            app:layout_constraintTop_toTopOf="@id/guideGameChar"
+            app:layout_constraintBottom_toTopOf="@id/guideGameTab">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -169,122 +215,33 @@
 
         </TableLayout>
 
-        <TextView
-            android:id="@+id/txtCase"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/guideGame1"
-            app:layout_constraintTop_toBottomOf="@id/tbPlayer"/>
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideGame1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.45"/>
-
-        <TableRow
-            android:id="@+id/trDeck"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/guideGame1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent">
-
-            <ImageView
-                android:id="@+id/imgDeck1"
-                android:layout_width="50dp"
-                android:layout_height="70dp"
-                android:src="@drawable/layoutshape"/>
-
-            <ImageView
-                android:id="@+id/imgDeck2"
-                android:layout_width="50dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/layoutshape"/>
-
-            <ImageView
-                android:id="@+id/imgDeck3"
-                android:layout_width="50dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/layoutshape"/>
-
-            <ImageView
-                android:id="@+id/imgDeck4"
-                android:layout_width="50dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/layoutshape"/>
-
-            <ImageView
-                android:id="@+id/imgDeck5"
-                android:layout_width="50dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/layoutshape"/>
-
-            <ImageView
-                android:id="@+id/imgDeck6"
-                android:layout_width="50dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/layoutshape"/>
-
-        </TableRow>
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideGame2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.1"/>
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideGame3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.9"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/viewChat"
-            android:layout_width="0dp"
-            android:layout_marginTop="20dp"
-            android:layout_height="200dp"
-            app:layout_constraintLeft_toRightOf="@id/guideGame2"
-            app:layout_constraintRight_toLeftOf="@id/guideGame3"
-            app:layout_constraintTop_toBottomOf="@id/trDeck"
-            android:background="@drawable/layoutshape"/>
-
-        <TableRow
-            android:id="@+id/trChat"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabGame"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/viewChat"
-            app:layout_constraintLeft_toRightOf="@id/guideGame2"
-            app:layout_constraintRight_toLeftOf="@id/guideGame3">
+            tools:layout_editor_absoluteX="1dp"
+            app:layout_constraintLeft_toRightOf="@id/guideGameL"
+            app:layout_constraintRight_toLeftOf="@id/guideGameR"
+            app:layout_constraintTop_toBottomOf="@id/guideGameTab">
 
-            <EditText
-                android:id="@+id/editChat"
+            <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="채팅을 입력해 주세요."
+                android:text="채팅" />
 
-                android:layout_weight="3"/>
-
-            <Button
-                android:id="@+id/btnChatSend"
-                android:layout_width="62dp"
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="전송"/>
+                android:text="카드" />
 
-        </TableRow>
+        </com.google.android.material.tabs.TabLayout>
 
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/pagerGame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
