--- a/app/src/main/res/layout/fragment_deck.xml
+++ b/app/src/main/res/layout/fragment_deck.xml
@@ -3,12 +3,96 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".DeckFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideDeckHo1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.52"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideDeckL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.1"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideDeckR"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.9"/>
+
+
+        <ImageView
+            android:id="@+id/imgDeck1"
+            android:layout_width="60dp"
+            android:layout_height="80dp"
+            app:layout_constraintTop_toBottomOf="@id/guideDeckHo1"
+            app:layout_constraintBottom_toTopOf="@id/imgDeck4"
+            app:layout_constraintLeft_toRightOf="@id/guideDeckL"
+            app:layout_constraintRight_toLeftOf="@id/imgDeck2"
+            android:src="@drawable/layoutshape" />
+
+        <ImageView
+            android:id="@+id/imgDeck2"
+            android:layout_width="60dp"
+            android:layout_height="80dp"
+            android:src="@drawable/layoutshape"
+            app:layout_constraintTop_toTopOf="@id/imgDeck1"
+            app:layout_constraintBottom_toBottomOf="@id/imgDeck1"
+            app:layout_constraintLeft_toRightOf="@id/imgDeck1"
+            app:layout_constraintRight_toLeftOf="@id/imgDeck3"/>
+
+        <ImageView
+            android:id="@+id/imgDeck3"
+            android:layout_width="60dp"
+            android:layout_height="80dp"
+            android:src="@drawable/layoutshape"
+            app:layout_constraintTop_toTopOf="@id/imgDeck1"
+            app:layout_constraintBottom_toBottomOf="@id/imgDeck1"
+            app:layout_constraintLeft_toRightOf="@id/imgDeck2"
+            app:layout_constraintRight_toLeftOf="@id/guideDeckR" />
+
+
+        <ImageView
+            android:id="@+id/imgDeck4"
+            android:layout_width="60dp"
+            android:layout_height="80dp"
+            app:layout_constraintTop_toBottomOf="@id/guideDeckHo1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/guideDeckL"
+            app:layout_constraintRight_toLeftOf="@id/imgDeck5"
+            android:src="@drawable/layoutshape" />
+
+        <ImageView
+            android:id="@+id/imgDeck5"
+            android:layout_width="60dp"
+            android:layout_height="80dp"
+            android:src="@drawable/layoutshape"
+            app:layout_constraintTop_toTopOf="@id/imgDeck4"
+            app:layout_constraintBottom_toBottomOf="@id/imgDeck4"
+            app:layout_constraintLeft_toRightOf="@id/imgDeck4"
+            app:layout_constraintRight_toLeftOf="@id/imgDeck6"/>
+
+        <ImageView
+            android:id="@+id/imgDeck6"
+            android:layout_width="60dp"
+            android:layout_height="80dp"
+            android:src="@drawable/layoutshape"
+            app:layout_constraintTop_toTopOf="@id/imgDeck4"
+            app:layout_constraintBottom_toBottomOf="@id/imgDeck4"
+            app:layout_constraintLeft_toRightOf="@id/imgDeck5"
+            app:layout_constraintRight_toLeftOf="@id/guideDeckR" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
