햄버거 버튼 완성

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,30 +22,13 @@
             app:layout_constraintHeight_percent="0.9"
             app:layout_constraintWidth_percent="0.8">
 
-            <ImageButton
-                android:id="@+id/imbHelp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/mainTitle"
-                app:layout_constraintBaseline_toBaselineOf="@id/imgUser"
-                android:background="#00000000"
-                android:src="@drawable/imbhelp"/>
 
             <ImageView
                 android:id="@+id/imgUser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBaseline_toBaselineOf="@id/imbHelp"
-                app:layout_constraintBottom_toTopOf="@id/mainTitle"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintRight_toRightOf="parent"
                 tools:srcCompat="@drawable/userimg"/>
 
             <TextView
@@ -98,10 +81,21 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"/>
 
+            <ImageButton
+                android:id="@+id/imbSetting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/imbsetting"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:background="#00000000"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include layout="@layout/fragment_profile"/>
+
+    <include layout="@layout/fragment_setting"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
