--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -238,11 +238,19 @@
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/pagerGame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/tabGame"
+            app:layout_constraintLeft_toRightOf="@id/guideGameL"
+            app:layout_constraintRight_toLeftOf="@id/guideGameR"
+            app:layout_constraintBottom_toBottomOf="@id/guideGameB" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideGameB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.9"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
