게임 액티비티 구현 중

--- a/app/src/main/res/layout/dial_room.xml
+++ b/app/src/main/res/layout/dial_room.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/layoutshape">
 
     <TextView
-        android:id="@+id/txtRoomDial"
+        android:id="@+id/txtEnterRoom"
         android:text="방 만들기"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
         android:hint="방 제목을 입력해 주세요."
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtRoomDial"
+        app:layout_constraintTop_toBottomOf="@id/txtEnterRoom"
         app:layout_constraintBottom_toTopOf="@id/guideRoomDial"/>
 
     <androidx.constraintlayout.widget.Guideline
@@ -84,13 +84,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/txtRoomDial2"
-        app:layout_constraintBottom_toTopOf="@id/guideRoomDial2"
+        app:layout_constraintBottom_toTopOf="@id/guideEnterRoom"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.1"/>
 
     <TextView
-        android:id="@+id/txtRoomDial3"
+        android:id="@+id/txtEnterRoom2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="비밀번호 설정"
@@ -99,42 +99,42 @@
         app:layout_constraintLeft_toRightOf="@id/chkRoomLock"/>
 
     <EditText
-        android:id="@+id/editRoomPw"
+        android:id="@+id/editEnterRoomPw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:ems="6"
-        app:layout_constraintTop_toTopOf="@id/txtRoomDial3"
-        app:layout_constraintBottom_toBottomOf="@id/txtRoomDial3"
-        app:layout_constraintLeft_toRightOf="@id/txtRoomDial3"
+        app:layout_constraintTop_toTopOf="@id/txtEnterRoom2"
+        app:layout_constraintBottom_toBottomOf="@id/txtEnterRoom2"
+        app:layout_constraintLeft_toRightOf="@id/txtEnterRoom2"
         app:layout_constraintRight_toRightOf="parent"/>
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideRoomDial2"
+        android:id="@+id/guideEnterRoom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.7"/>
 
     <Button
-        android:id="@+id/btnRoomDialYes"
+        android:id="@+id/btnEnterRoomYes"
         android:text="생성 하기"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/guideRoomDial2"
+        app:layout_constraintTop_toBottomOf="@id/guideEnterRoom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/btnRoomDialNo"/>
+        app:layout_constraintRight_toLeftOf="@id/btnEnterRoomNo"/>
 
     <Button
-        android:id="@+id/btnRoomDialNo"
+        android:id="@+id/btnEnterRoomNo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="뒤로 가기"
-        app:layout_constraintTop_toTopOf="@id/btnRoomDialYes"
-        app:layout_constraintBottom_toBottomOf="@id/btnRoomDialYes"
-        app:layout_constraintLeft_toRightOf="@id/btnRoomDialYes"
+        app:layout_constraintTop_toTopOf="@id/btnEnterRoomYes"
+        app:layout_constraintBottom_toBottomOf="@id/btnEnterRoomYes"
+        app:layout_constraintLeft_toRightOf="@id/btnEnterRoomYes"
         app:layout_constraintRight_toRightOf="parent"/>
 
 
