--- a/app/src/main/res/drawable/imbup.xml
+++ b/app/src/main/res/drawable/imbup.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/help2"
+    <item android:drawable="@drawable/up2"
         android:state_pressed="true" />
 
-    <item android:drawable="@drawable/help"
+    <item android:drawable="@drawable/up"
         android:state_focused="true" />
-    <item android:drawable="@drawable/help" />
+    <item android:drawable="@drawable/up" />
 </selector>
