--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -62,6 +62,14 @@
 
         </FrameLayout>
 
+        <ImageView
+            android:id="@+id/imgGameLock"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintLeft_toRightOf="@id/guideGameL"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/roomlocked" />
+
         <Button
             android:id="@+id/btnGameStart"
             android:layout_width="wrap_content"
